--- a/style.css
+++ b/style.css
@@ -248,6 +248,13 @@ font-weight: 500;
     main {
       gap: 50px;
     }
+    main .texts span{
+        font-size: 40px;
+        display: flex;
+        justify-content: center;
+        /* font-size: 30px; */
+        /* font-weight: 500; */
+      }
   }
   @media (max-width: 630px) {
     main {
@@ -297,6 +304,13 @@ font-weight: 500;
       top: -100px;
       left: -50px;
     }
+    main .texts span{
+        font-size: 40px;
+        display: flex;
+        justify-content: center;
+        /* font-size: 30px; */
+        /* font-weight: 500; */
+      }
     main {
       flex-direction: column;
       gap: 50px;
