--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ font-weight: 500;
         font-size: 35px;
         display: flex;
         justify-content: center;
+        width: 80vw;
         
       }
     main .texts p{
