--- a/style.css
+++ b/style.css
@@ -354,9 +354,9 @@ font-weight: 500;
     main .mobile .body .body__message-received-btn {
       width: 180px;
     }
-    main form{
+    /* main form{
 padding: 10px;
-    }
+    } */
   }
   
   /*# sourceMappingURL=main.css.map */
