--- a/style.css
+++ b/style.css
@@ -263,8 +263,8 @@ font-weight: 500;
   @media (max-width: 630px) {
     main {
       flex-direction: column;
-      gap: 65px;
-      padding: 4rem 0;
+      gap: 75px;
+      padding: 7rem 0;
     }
     main .texts {
       width: 80vw;
@@ -325,7 +325,7 @@ font-weight: 500;
     background: hsla(276, 50%, 96%, 0.677);
     width: 50%;
     height: 450px;
-    /* bottom: 0; */
+    bottom: -50%;
     right: 0;
     border-radius: 200px 0 0 0;
     transition: 0.3s ease all;
@@ -347,7 +347,8 @@ font-weight: 500;
       text-align: center;
     }
     main {
-      gap: 50px;
+      /* gap: 50px; */
+      /* padding: 10px; */
     }
     main .mobile {
       max-width: 87vw;
