--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ font-weight: 500;
       text-align: center;
     }
     main {
-      /* gap: 50px; */
+      gap: 75px;
       /* padding: 10px; */
     }
     main .mobile {
